LDDTool Cleanup - Replaced deprecated Integer() conversion with Integer.valueOf()